--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="stylesheet" href="../src/styles/App.css">
     <title>React App</title>
   </head>
-  <body>
+  <body id="body">
     <div id="root">
       
     </div>
